copy constructor and destructor for linked list, minimal working example for array list. I will probably update and comment things more better

--- a/inClassCodeExamples/lists/CMakeLists.txt
+++ b/inClassCodeExamples/lists/CMakeLists.txt
@@ -6,5 +6,9 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(linkedListTests linkedListTests.cpp
         SinglyLinkedList.cpp
         SinglyLinkedList.h
-        )
+        ArrayList.cpp
+        ArrayList.h
+)
 
+add_executable(arrayListTests ArrayList.cpp ArrayList.h
+        arrayListTests.cpp)
